2006-04-15  Andrew Cagney  <cagney@redhat.com>

	* funit-print-auxv.c (main): Assume the optional argument is the
	output file name.

	* funit.xml: Add reference to funit-exec, and funit-child.
	* util.h: #include <stdlib.h>.
	* funit-child.c: Re-implement exec, so that it can exec a program
	specified as an argument.
	* funit-exec.c, funit-exec.xml: New files.

2006-03-20  Andrew Cagney  <cagney@redhat.com>

	* funit-child.c (notify_manager): Always print the trace message.
	(server): Delete log messages now made redundant.

2006-03-19  Andrew Cagney  <cagney@redhat.com>

	* funit-threads.xml: New file.
	* funit-child.c (OK, ok, pfatal, fatal, trace): Move to "util.h";
	#include.
	* util.h: New file.
	* funit-threads.c: Include "util.h"; add OK to all pthread calls.
	(op_clone): Rename loop.
	(op_loop, op_block, usage): New.
	(main): Parse --block, --clone and --loop.

2006-02-23  Andrew Cagney  <cagney@redhat.com>

	* funit-child.c (main, server, main_alarm): Add global variable
	main_alarm.  Move alarm call to server function, all new processes
	get an alarm.

2006-02-10  Andrew Cagney  <cagney@redhat.com>

	* funit-syscallint.c (main): Allow EINTR as a return code.

2006-02-09  Andrew Cagney  <cagney@redhat.com>

	* funit-syscallint.c (main): Fix return status check for <<read>>,
	and <<write>.

2006-02-08  Adam Jocksch  <ajocksch@toothpaste.toronto.redhat.com>

	* funit-syscallint.c (main): Fix compiler warnings.
	* funit-modify.c (main): Now checks return value of fwrite, aborts
	if it is != 1.

2006-02-06  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Call Paths .setExecPrefix with PKGLIBEXECDIR.

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* funit-child.xml: New file.
	* funit-child.c: Copy from frysk-core/prog/.
	* funit-exit.c: Ditto.
	* funit-fib-clone.c: Ditto.
	* funit-fib-exec.c: Ditto.
	* funit-fib-fork.c: Ditto.
	* funit-ia32-modify.S: Ditto.
	* funit-ia32-regs.S: Ditto.
	* funit-modify.c: Ditto.
	* funit-print-argc.c: Ditto.