@@ -1,3 +1,12 @@
+2006-05-01  Stan Cox  <scox@redhat.com>
+
+	* TestTaskTerminateObserver.java (AttachCounter): New class.
+	(TerminatingCounter): New class.
+	(testTerm): New test.
+	* TestLib.java (DetachedAckProcess): New constructor.
+	* TestExec.java (testProcBlockExec): Cast null.
+	(testTaskBlockExec): Cast null.
+
 2006-04-17  Andrew Cagney  <cagney@redhat.com>
 
 	* Host.java (requestCreateAttachedProcXXX): Rename to
